[project]
name = "YetAnotherPicSearch"
dynamic = ["version"]
description = "Yet Another Picture Search Nonebot Plugin"
authors = [
    { name = "NekoAria" },
    { name = "student_2333", email = "lgc2333@126.com" },
]
requires-python = ">=3.9,<4"
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-plugin-alconna>=0.54.0",
    "nonebot-plugin-waiter>=0.8.0",
    "cookit[pydantic,loguru,nonebot-alconna]>=0.8.1",
    "arrow>=1.3.0",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "PicImageSearch>=3.11.2",
    "pyquery>=2.0.1",
    "tenacity>=9.0.0",
    "msgpack>=1.1.0",
    "Pillow>=9.0.0",
]
keywords = [
    "nonebot",
    "ascii2d",
    "baidu",
    "e-hentai",
    "google",
    "iqdb",
    "saucenao",
    "tracemoe",
    "yandex",
    "anime",
    "danbooru",
    "doujin",
    "pixiv",
]
license = { text = "GPL-3.0-only" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/YetAnotherPicSearch"
repository = "https://github.com/lgc-NB2Dev/YetAnotherPicSearch"

[project.optional-dependencies]
socks = ["httpx[socks]>=0.27.0"]

[dependency-groups]
dev = ["black>=24.10.0", "mypy>=1.13.0", "pre-commit>=4.0.1", "ruff>=0.8.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "YetAnotherPicSearch/__init__.py"

[tool.pdm.build]
includes = ["YetAnotherPicSearch"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_error_codes = true
strict = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.py" = ["N813"]

[tool.ruff.lint.pydocstyle]
convention = "google"
