[project]
name = "YetAnotherPicSearch"
dynamic = ["version"]
description = "Yet Another Picture Search Nonebot Plugin"
authors = [
    { name = "NekoAria" },
    { name = "LgCookie", email = "lgc2333@126.com" },
]
requires-python = ">=3.9,<4"
dependencies = [
    "nonebot2>=2.4.1",
    "nonebot-plugin-alconna>=0.59.0",
    "nonebot-plugin-waiter>=0.8.1",
    "cookit[loguru,nonebot-alconna,pydantic]>=0.9.3",
    "arrow>=1.3.0",
    "httpx>=0.27.2",
    "lxml>=5.3.0",
    "PicImageSearch>=3.11.4",
    "pyquery>=2.0.1",
    "tenacity>=9.0.0",
    "msgpack>=1.1.0",
    "Pillow>=11.1.0",
]
keywords = [
    "nonebot",
    "ascii2d",
    "baidu",
    "e-hentai",
    "google",
    "iqdb",
    "saucenao",
    "tracemoe",
    "yandex",
    "anime",
    "danbooru",
    "doujin",
    "pixiv",
]
license = { text = "GPL-3.0-only" }
readme = "README.md"

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/YetAnotherPicSearch"
repository = "https://github.com/lgc-NB2Dev/YetAnotherPicSearch"

[project.optional-dependencies]
socks = ["httpx[socks]>=0.27.2"]

[dependency-groups]
dev = ["basedpyright>=1.26.0", "pre-commit>=4.1.0", "ruff>=0.9.4"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.version]
source = "file"
path = "YetAnotherPicSearch/__init__.py"

[tool.pdm.build]
includes = ["YetAnotherPicSearch"]

[tool.basedpyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
reportShadowedImports = false

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FAST",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TC",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "F821",    # conflict with pyright
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "PLC2701",
    "PLR09",
    "PLR1702",
    "PLR2004",
    "PLR6301",
    "PLW0603",
    "PLW1641",
    "PLW2901",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TC001",
    "TRY002",
    "TRY003",
    "W505",
]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true

[tool.ruff.lint.flake8-type-checking]
exempt-modules = [
    "types",
    "typing",
    "typing_extensions",
    "collections",
    "pathlib",
    "nonebot",
    "nonebot_plugin_alconna",
]
quote-annotations = true

[tool.ruff.lint.pydocstyle]
convention = "google"
