[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = ["nonebot2>=2.4.3", "nonebot-plugin-htmlrender>=0.6.6"]
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }

[dependency-groups]
dev = ["poethepoet>=0.37.0"]

[tool.poe.tasks]
pull.script = "update_help_image"
